# bancao

./: .gitignore  README.md  conta.py  main.py  pyproject.toml
bancao/interfaces/: ativa_conta.py  deposita.py  desativa_conta.py  paga_taxa.py  saca.py
nucleo_sistema/: __init__.py  conta.py
sistema/: main.py
